Removed JPA annotations; Set retention;